# Copyright (c) 2020 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (rtc_include_tests) {
  rtc_library("pc_scenario_tests") {
    testonly = true
    sources = [ "goog_cc_test.cc" ]
    deps = [
      "..:pc_test_utils",
      "../../api:audio_options_api",
      "../../api:make_ref_counted",
      "../../api:rtc_error",
      "../../api:rtc_stats_api",
      "../../api:simulated_network_api",
      "../../api/units:data_rate",
      "../../api/units:time_delta",
      "../../test:test_support",
      "../../test/peer_scenario",
    ]
  }
}
