# Copyright 2025 The WebRTC project authors. All rights reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS. All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_library("utils") {
  testonly = true
  sources = [
    "utils.cc",
    "utils.h",
  ]
  deps = [
    "../../../api:array_view",
    "../../../rtc_base:checks",
    "../../../rtc_base:stringutils",
    "../../../test:fileutils",
    "//third_party/abseil-cpp/absl/strings:string_view",
  ]
}

if (rtc_include_tests) {
  rtc_library("utils_unittest") {
    testonly = true
    sources = [ "utils_unittest.cc" ]
    deps = [
      ":utils",
      "../../../api:scoped_refptr",
      "../../../api/video:video_frame",
      "../../../test:fileutils",
      "../../../test:test_support",
      "../../../test:video_test_support",
    ]
  }

  rtc_library("corruption_detection_eval_tests") {
    testonly = true
    sources = []
    deps = [ ":utils_unittest" ]
  }
}
